--- a/src/project.config.json
+++ b/src/project.config.json
@@ -12,8 +12,8 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.1.1",
-	"appid": "wx51e18b2431eeae26",
-	"projectname": "mp-purchase",
+	"appid": "wxd1bbd5f92983c248",
+	"projectname": "hk-purchase",
 	"isGameTourist": false,
 	"condition": {
 		"search": {
